<?xml version="1.0"?>
<package format="2">
	<name>rrt_planners</name>
	<version>0.0.0</version>
	<description>A collection of global planners based on Rapidly-exploring Random Trees.</description>
	<maintainer email="todo@todo.todo">todo</maintainer>
	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>roscpp</depend>
	<depend>nav_core</depend>
	<depend>costmap_2d</depend>
</package>
